--- a/www-misc/vdradmin-am/ChangeLog
+++ b/www-misc/vdradmin-am/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-misc/vdradmin-am
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-misc/cvs-repo/gentoo-x86/www-misc/vdradmin-am/ChangeLog,v 1.18 2011/02/16 19:34:58 billie Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-misc/cvs-repo/gentoo-x86/www-misc/vdradmin-am/ChangeLog,v 1.19 2011/02/27 11:21:45 hd_brummy Exp $
+
+  27 Feb 2011; Joerg Bornkessel <hd_brummy@gentoo.org>
+  vdradmin-am-3.6.7-r1.ebuild:
+  stable amd64 x86
 
   16 Feb 2011; Daniel Pielmeier <billie@gentoo.org>
   vdradmin-am-3.6.7-r1.ebuild:
