--- a/dev-ruby/net-ssh/ChangeLog
+++ b/dev-ruby/net-ssh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/net-ssh
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.80 2011/01/20 07:37:46 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/net-ssh/ChangeLog,v 1.81 2011/02/27 11:57:33 xarthisius Exp $
+
+  27 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> net-ssh-2.1.0.ebuild:
+  Marked ~ppc64 wrt #351729
 
 *net-ssh-2.1.0 (20 Jan 2011)
 
