--- a/media-video/devede/ChangeLog
+++ b/media-video/devede/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/devede
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/devede/ChangeLog,v 1.29 2011/02/25 14:57:48 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/devede/ChangeLog,v 1.30 2011/02/27 14:08:49 hwoarang Exp $
+
+  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> devede-3.16.9.ebuild:
+  Stable on amd64 wrt bug #348320
 
   25 Feb 2011; Thomas Kahle <tomka@gentoo.org> devede-3.16.9.ebuild:
   x86 stable per bug 348320
