--- a/gnome-extra/gnome-color-manager/ChangeLog
+++ b/gnome-extra/gnome-color-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-color-manager
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-color-manager/ChangeLog,v 1.3 2011/02/05 13:31:15 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-color-manager/ChangeLog,v 1.4 2011/02/27 15:17:44 eva Exp $
+
+  27 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org>
+  gnome-color-manager-2.32.0.ebuild:
+  Pin libunique dependency to slot 1.
 
   05 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
   gnome-color-manager-2.32.0.ebuild,
