--- a/media-plugins/gst-plugins-cdparanoia/ChangeLog
+++ b/media-plugins/gst-plugins-cdparanoia/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-cdparanoia
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-cdparanoia/ChangeLog,v 1.165 2011/02/24 06:45:30 leio Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-cdparanoia/ChangeLog,v 1.166 2011/02/27 15:27:35 ranger Exp $
+
+  27 Feb 2011; Brent Baude <ranger@gentoo.org>
+  gst-plugins-cdparanoia-0.10.31.ebuild:
+  Marking gst-plugins-cdparanoia-0.10.31 ppc stable for bug 353434
 
 *gst-plugins-cdparanoia-0.10.32 (24 Feb 2011)
 
