--- a/media-plugins/gst-plugins-gio/ChangeLog
+++ b/media-plugins/gst-plugins-gio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-gio
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-gio/ChangeLog,v 1.74 2011/02/24 06:49:30 leio Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-gio/ChangeLog,v 1.75 2011/02/27 15:28:06 ranger Exp $
+
+  27 Feb 2011; Brent Baude <ranger@gentoo.org>
+  gst-plugins-gio-0.10.31.ebuild:
+  Marking gst-plugins-gio-0.10.31 ppc stable for bug 353434
 
 *gst-plugins-gio-0.10.32 (24 Feb 2011)
 
