--- a/media-libs/gstreamer/ChangeLog
+++ b/media-libs/gstreamer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.282 2011/02/24 08:03:59 leio Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.283 2011/02/27 15:33:17 ranger Exp $
+
+  27 Feb 2011; Brent Baude <ranger@gentoo.org> gstreamer-0.10.31.ebuild:
+  Marking gstreamer-0.10.31 ppc stable for bug 353434
 
   24 Feb 2011; Mart Raudsepp <leio@gentoo.org>
   -files/gstreamer-0.10.30-make-382.patch, -gstreamer-0.10.24.ebuild,
