--- a/gnome-extra/gnome-media/ChangeLog
+++ b/gnome-extra/gnome-media/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-media
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.233 2011/02/24 19:30:46 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/gnome-media/ChangeLog,v 1.234 2011/02/27 16:08:39 eva Exp $
+
+  27 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org>
+  gnome-media-2.32.0.ebuild:
+  Pin libunique dependency to slot 1.
 
   24 Feb 2011; Thomas Kahle <tomka@gentoo.org> gnome-media-2.32.0.ebuild:
   x86 stable per bug 353436
