--- a/profiles/arch/sparc/ChangeLog
+++ b/profiles/arch/sparc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/sparc profile
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.119 2011/02/27 16:17:45 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.120 2011/02/27 16:43:04 armin76 Exp $
+
+  27 Feb 2011; Raúl Porcel <armin76@gentoo.org> -package.mask:
+  Punt package.mask
 
   27 Feb 2011; Raúl Porcel <armin76@gentoo.org> use.mask:
   Use.mask pdfannotextractor
