--- a/dev-python/matplotlib/ChangeLog
+++ b/dev-python/matplotlib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/matplotlib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.101 2011/02/24 04:49:20 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.102 2011/02/27 18:11:55 ranger Exp $
+
+  27 Feb 2011; Brent Baude <ranger@gentoo.org> matplotlib-1.0.1.ebuild:
+  stable ppc, bug 353856
 
 *matplotlib-1.0.1-r1 (24 Feb 2011)
 
