--- a/net-misc/dahdi/ChangeLog
+++ b/net-misc/dahdi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/dahdi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dahdi/ChangeLog,v 1.13 2011/02/26 17:20:53 tomka Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dahdi/ChangeLog,v 1.14 2011/02/27 18:57:01 chainsaw Exp $
+
+  27 Feb 2011; Tony Vroon <chainsaw@gentoo.org> dahdi-2.4.0-r1.ebuild:
+  Mark stable on AMD64 for security bug #352059. Arch testing by Agostino "ago"
+  Sarubbo.
 
   26 Feb 2011; Thomas Kahle <tomka@gentoo.org> dahdi-2.4.0-r1.ebuild:
   x86 stable per bug 352059
