--- a/app-admin/monit/ChangeLog
+++ b/app-admin/monit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/monit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/monit/ChangeLog,v 1.54 2011/01/15 18:30:48 patrick Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/monit/ChangeLog,v 1.55 2011/02/27 20:30:05 hwoarang Exp $
+
+  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> monit-5.2.3.ebuild:
+  Stable on amd64 wrt bug #355567
 
 *monit-5.2.3 (15 Jan 2011)
 
