--- a/kde-misc/customizable-weather/ChangeLog
+++ b/kde-misc/customizable-weather/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/customizable-weather
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/customizable-weather/ChangeLog,v 1.13 2011/02/13 20:03:37 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/customizable-weather/ChangeLog,v 1.14 2011/02/27 21:32:56 dilfridge Exp $
+
+*customizable-weather-1.3.4 (27 Feb 2011)
+
+  27 Feb 2011; Andreas K. Huettel <dilfridge@gentoo.org>
+  +customizable-weather-1.3.4.ebuild:
+  Version bump
 
   13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   -customizable-weather-1.2.3.ebuild, -customizable-weather-1.3.2.ebuild,
