--- a/www-client/rekonq/ChangeLog
+++ b/www-client/rekonq/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/rekonq
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/rekonq/ChangeLog,v 1.18 2011/02/28 14:34:31 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/rekonq/ChangeLog,v 1.19 2011/02/28 14:43:10 scarabeus Exp $
+
+  28 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> rekonq-0.6.1.ebuild,
+  rekonq-0.6.85.ebuild:
+  Update homepage
 
 *rekonq-0.6.85 (28 Feb 2011)
 
