--- a/x11-plugins/compiz-plugins-extra/ChangeLog
+++ b/x11-plugins/compiz-plugins-extra/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-plugins/compiz-plugins-extra
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/compiz-plugins-extra/ChangeLog,v 1.14 2011/02/26 22:49:51 signals Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/compiz-plugins-extra/ChangeLog,v 1.15 2011/02/28 17:45:20 ssuominen Exp $
+
+  28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  compiz-plugins-extra-0.8.6-r1.ebuild,
+  files/compiz-plugins-extra-0.8.6-libnotify.patch:
+  Fix building with x11-libs/libnotify >= 0.7 wrt #354761 by Diego Elio
+  Pettenò.
 
   26 Feb 2011; Kevin McCarthy <signals@gentoo.org>
   compiz-plugins-extra-0.8.4-r1.ebuild, compiz-plugins-extra-0.8.6-r1.ebuild:
