--- a/dev-games/openscenegraph/ChangeLog
+++ b/dev-games/openscenegraph/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-games/openscenegraph
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.36 2011/02/26 13:36:17 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.37 2011/02/28 17:46:15 ssuominen Exp $
+
+  28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  openscenegraph-2.8.3.ebuild:
+  Use virtual/jpeg.
 
   26 Feb 2011; Raúl Porcel <armin76@gentoo.org> openscenegraph-2.8.3.ebuild:
   Drop sparc keywords
