--- a/app-editors/nano/ChangeLog
+++ b/app-editors/nano/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/nano
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.261 2011/02/28 15:17:50 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/nano/ChangeLog,v 1.262 2011/02/28 18:26:11 vapier Exp $
+
+*nano-2.3.0 (28 Feb 2011)
+
+  28 Feb 2011; Mike Frysinger <vapier@gentoo.org> +nano-2.3.0.ebuild:
+  Version bump.
 
   28 Feb 2011; Brent Baude <ranger@gentoo.org> nano-2.2.5.ebuild:
   stable ppc, bug 351707
