--- a/media-gfx/flphoto/ChangeLog
+++ b/media-gfx/flphoto/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/flphoto
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/flphoto/Attic/ChangeLog,v 1.21 2011/02/26 17:12:41 signals Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/flphoto/Attic/ChangeLog,v 1.22 2011/02/28 18:42:27 hwoarang Exp $
+
+  28 Feb 2011; Markos Chandras <hwoarang@gentoo.org> flphoto-1.3.1-r2.ebuild:
+  Stable on amd64 wrt bug #356879
 
   26 Feb 2011; Kevin McCarthy <signals@gentoo.org> flphoto-1.3.1-r1.ebuild,
   flphoto-1.3.1-r2.ebuild:
