--- a/dev-db/pgadmin3/ChangeLog
+++ b/dev-db/pgadmin3/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/pgadmin3
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgadmin3/ChangeLog,v 1.54 2011/02/21 06:54:11 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/pgadmin3/ChangeLog,v 1.55 2011/02/28 18:57:04 hwoarang Exp $
+
+  28 Feb 2011; Markos Chandras <hwoarang@gentoo.org> pgadmin3-1.12.2.ebuild:
+  Stable on amd64 wrt bug #355321
 
   21 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   pgadmin3-1.12.2.ebuild:
