--- a/sys-apps/less/ChangeLog
+++ b/sys-apps/less/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/less
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/less/ChangeLog,v 1.120 2011/01/06 01:04:46 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/less/ChangeLog,v 1.121 2011/02/28 19:14:52 vapier Exp $
+
+*less-441 (28 Feb 2011)
+
+  28 Feb 2011; Mike Frysinger <vapier@gentoo.org> +less-441.ebuild:
+  Version bump.
 
 *less-440 (06 Jan 2011)
 
