--- a/net-misc/whois/ChangeLog
+++ b/net-misc/whois/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/whois
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/whois/ChangeLog,v 1.155 2011/02/22 18:27:01 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/whois/ChangeLog,v 1.156 2011/03/01 00:33:08 ranger Exp $
+
+  01 Mar 2011; Brent Baude <ranger@gentoo.org> whois-5.0.8.ebuild:
+  stable ppc64, bug 353737
 
   22 Feb 2011; nixnut <nixnut@gentoo.org> whois-5.0.8.ebuild:
   ppc stable #353737
