--- a/mail-client/postler/ChangeLog
+++ b/mail-client/postler/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/postler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/postler/ChangeLog,v 1.2 2011/02/28 21:05:21 angelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/postler/ChangeLog,v 1.3 2011/03/01 04:50:14 angelos Exp $
+
+  01 Mar 2011; <angelos@gentoo.org> postler-0.1.0.ebuild:
+  Force python2 for waf (bug #356891)
 
   28 Feb 2011; <angelos@gentoo.org> postler-0.1.0.ebuild, metadata.xml:
   Renamed USE=indicate to USE=ayatana and fixed docs install, thanks ssuominen
