--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/chromium/ChangeLog,v 1.290 2011/02/25 10:37:57 wired Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/chromium/ChangeLog,v 1.291 2011/03/01 07:18:22 phajdan.jr Exp $
+
+*chromium-9.0.597.107 (01 Mar 2011)
+
+  01 Mar 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  +chromium-9.0.597.107.ebuild:
+  Version bump for stable channel release.
 
 *chromium-11.0.672.2-r2 (25 Feb 2011)
 
