--- a/dev-php/PEAR-PEAR/ChangeLog
+++ b/dev-php/PEAR-PEAR/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-PEAR
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.128 2011/02/28 19:22:15 olemarkus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.129 2011/03/01 11:17:02 hwoarang Exp $
+
+  01 Mar 2011; Markos Chandras <hwoarang@gentoo.org> PEAR-PEAR-1.9.2.ebuild:
+  Stable on amd64 wrt bug #356893
 
 *PEAR-PEAR-1.9.2 (28 Feb 2011)
 
