--- a/dev-java/javassist/ChangeLog
+++ b/dev-java/javassist/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/javassist
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/javassist/ChangeLog,v 1.26 2011/01/30 16:49:11 fordfrog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/javassist/ChangeLog,v 1.27 2011/03/01 11:23:42 hwoarang Exp $
+
+  01 Mar 2011; Markos Chandras <hwoarang@gentoo.org> javassist-3.14.0.ebuild:
+  Stable on amd64 wrt bug #356931
 
 *javassist-3.14.0 (30 Jan 2011)
 
