--- a/app-admin/syslog-ng/ChangeLog
+++ b/app-admin/syslog-ng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/syslog-ng
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.282 2011/03/01 15:02:54 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.283 2011/03/01 15:05:06 ranger Exp $
+
+  01 Mar 2011; Brent Baude <ranger@gentoo.org> syslog-ng-3.0.10.ebuild:
+  stable ppc64, bug 355099
 
   01 Mar 2011; Brent Baude <ranger@gentoo.org> syslog-ng-3.1.3.ebuild:
   stable ppc64, bug 350410
