--- a/media-plugins/gst-plugins-theora/ChangeLog
+++ b/media-plugins/gst-plugins-theora/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-theora
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-theora/ChangeLog,v 1.156 2011/02/27 15:30:36 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-theora/ChangeLog,v 1.157 2011/03/01 15:07:31 jer Exp $
+
+  01 Mar 2011; Jeroen Roovers <jer@gentoo.org>
+  gst-plugins-theora-0.10.31.ebuild:
+  Stable for HPPA (bug #353434).
 
   27 Feb 2011; Brent Baude <ranger@gentoo.org>
   gst-plugins-theora-0.10.31.ebuild:
