--- a/media-plugins/gst-plugins-x/ChangeLog
+++ b/media-plugins/gst-plugins-x/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gst-plugins-x
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-x/ChangeLog,v 1.106 2011/02/27 15:32:08 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-x/ChangeLog,v 1.107 2011/03/01 15:09:25 jer Exp $
+
+  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> gst-plugins-x-0.10.31.ebuild:
+  Stable for HPPA (bug #353434).
 
   27 Feb 2011; Brent Baude <ranger@gentoo.org> gst-plugins-x-0.10.31.ebuild:
   Marking gst-plugins-x-0.10.31 ppc stable for bug 353434
