--- a/sys-libs/gwenhywfar/ChangeLog
+++ b/sys-libs/gwenhywfar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/gwenhywfar
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.87 2011/02/26 11:24:06 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.88 2011/03/01 15:20:02 jer Exp $
+
+  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> gwenhywfar-4.0.2.ebuild:
+  Stable for HPPA (bug #355077).
 
   26 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> gwenhywfar-4.0.2.ebuild:
   amd64 stable wrt #355077
