--- a/dev-libs/libburn/ChangeLog
+++ b/dev-libs/libburn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libburn
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.89 2011/02/21 20:32:38 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.90 2011/03/01 15:22:15 jer Exp $
+
+  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> libburn-1.0.0.ebuild:
+  Stable for HPPA (bug #355097).
 
   21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libburn-1.0.0.ebuild:
   Stable on amd64 wrt bug #355097
