--- a/dev-tcltk/blt/ChangeLog
+++ b/dev-tcltk/blt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-tcltk/blt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/blt/ChangeLog,v 1.37 2011/02/25 20:46:20 signals Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/blt/ChangeLog,v 1.38 2011/03/01 16:46:39 jer Exp $
+
+  01 Mar 2011; Jeroen Roovers <jer@gentoo.org> blt-2.4z-r5.ebuild,
+  blt-2.4z-r8.ebuild:
+  Marked ~hppa (bug #355373).
 
   25 Feb 2011; Kevin McCarthy <signals@gentoo.org> blt-2.4z-r8.ebuild:
   Update depends from media-libs/jpeg to virtual/jpeg
