--- a/net-dns/bind-tools/ChangeLog
+++ b/net-dns/bind-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.183 2011/02/25 12:52:05 idl0r Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.184 2011/03/01 17:52:18 idl0r Exp $
+
+*bind-tools-9.8.0 (01 Mar 2011)
+
+  01 Mar 2011; Christian Ruppert <idl0r@gentoo.org>
+  -bind-tools-9.8.0_rc1.ebuild, +bind-tools-9.8.0.ebuild:
+  Version bump to 9.8.0
 
 *bind-tools-9.8.0_rc1 (25 Feb 2011)
 
