--- a/dev-db/mysql-workbench/ChangeLog
+++ b/dev-db/mysql-workbench/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/mysql-workbench
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql-workbench/ChangeLog,v 1.32 2011/03/01 18:37:01 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql-workbench/ChangeLog,v 1.33 2011/03/01 18:37:42 graaff Exp $
+
+  01 Mar 2011; Hans de Graaff <graaff@gentoo.org>
+  mysql-workbench-5.2.31.ebuild:
+  Add slot to gtk+ dependency.
 
   01 Mar 2011; Hans de Graaff <graaff@gentoo.org>
   -mysql-workbench-5.2.19.ebuild, -mysql-workbench-5.2.30.ebuild:
