--- a/app-misc/booh/ChangeLog
+++ b/app-misc/booh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/booh
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/booh/ChangeLog,v 1.29 2011/03/01 18:40:17 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/booh/ChangeLog,v 1.30 2011/03/01 18:40:59 graaff Exp $
+
+  01 Mar 2011; Hans de Graaff <graaff@gentoo.org> booh-0.9.3.ebuild:
+  Add slot to gtk+ dependency.
 
   01 Mar 2011; Hans de Graaff <graaff@gentoo.org> -booh-0.9.2.2.ebuild:
   Add slot to gtk+ dependency.
