--- a/x11-drivers/xf86-input-wacom/ChangeLog
+++ b/x11-drivers/xf86-input-wacom/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-input-wacom
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-wacom/ChangeLog,v 1.32 2011/02/20 10:54:27 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-input-wacom/ChangeLog,v 1.33 2011/03/01 18:54:51 scarabeus Exp $
+
+*xf86-input-wacom-0.10.11 (01 Mar 2011)
+
+  01 Mar 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  +xf86-input-wacom-0.10.11.ebuild:
+  Version bump.
 
   20 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
   xf86-input-wacom-0.10.8-r1.ebuild:
