--- a/app-admin/eselect-mesa/ChangeLog
+++ b/app-admin/eselect-mesa/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-mesa
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.11 2011/02/18 17:55:30 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-mesa/ChangeLog,v 1.12 2011/03/01 21:42:04 abcd Exp $
+
+  01 Mar 2011; Jonathan Callen <abcd@gentoo.org> eselect-mesa-0.0.9.ebuild:
+  Add ~amd64-linux/~x86-linux keywords
 
   18 Feb 2011; Pacho Ramos <pacho@gentoo.org> eselect-mesa-0.0.9.ebuild:
   amd64 stable, bug #355453
