--- a/net-libs/netwib/ChangeLog
+++ b/net-libs/netwib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/netwib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/netwib/ChangeLog,v 1.39 2011/03/02 08:58:03 radhermit Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/netwib/ChangeLog,v 1.40 2011/03/02 15:49:05 jer Exp $
+
+  02 Mar 2011; Jeroen Roovers <jer@gentoo.org> netwib-5.38.0.ebuild:
+  Readd old homepage.
 
   02 Mar 2011; Tim Harder <radhermit@gentoo.org> netwib-5.38.0.ebuild:
   Update HOMEPAGE and SRC_URI (bug #357019).
