--- a/net-analyzer/netwag/ChangeLog
+++ b/net-analyzer/netwag/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/netwag
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/netwag/ChangeLog,v 1.22 2011/03/02 09:10:54 radhermit Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/netwag/ChangeLog,v 1.23 2011/03/02 15:50:04 jer Exp $
+
+  02 Mar 2011; Jeroen Roovers <jer@gentoo.org> netwag-5.38.0.ebuild:
+  Readd old homepage.
 
   02 Mar 2011; Tim Harder <radhermit@gentoo.org> netwag-5.38.0.ebuild:
   Update HOMEPAGE and SRC_URI (bug #357019).
