--- a/sci-geosciences/mapnik/ChangeLog
+++ b/sci-geosciences/mapnik/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-geosciences/mapnik
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/mapnik/ChangeLog,v 1.22 2011/02/07 06:54:11 nerdboy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-geosciences/cvs-repo/gentoo-x86/sci-geosciences/mapnik/ChangeLog,v 1.23 2011/03/02 20:34:25 jlec Exp $
+
+  02 Mar 2011; Justin Lecher <jlec@gentoo.org> mapnik-0.6.1-r3.ebuild,
+  mapnik-0.7.1-r1.ebuild:
+  Correct Slots for gtk 3 introduction to tree
 
   07 Feb 2011; Steve Arnold <nerdboy@gentoo.org> mapnik-0.7.1-r1.ebuild:
   Updated with sed hacks to force scons to use specified C,CXX,LDFLAGS.
