--- a/x11-drivers/radeon-ucode/ChangeLog
+++ b/x11-drivers/radeon-ucode/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/radeon-ucode
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.13 2011/02/13 18:54:51 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.14 2011/03/03 09:40:25 chithanh Exp $
+
+*radeon-ucode-20110302 (03 Mar 2011)
+
+  03 Mar 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +radeon-ucode-20110302.ebuild:
+  Add newly released cayman ucode
 
   13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   -radeon-ucode-20101122.ebuild:
