--- a/dev-php/PEAR-PEAR/ChangeLog
+++ b/dev-php/PEAR-PEAR/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-PEAR
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.129 2011/03/01 11:17:02 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.130 2011/03/03 11:11:33 tomka Exp $
+
+  03 Mar 2011; Thomas Kahle <tomka@gentoo.org> PEAR-PEAR-1.9.2.ebuild:
+  x86 stable per bug 356893
 
   01 Mar 2011; Markos Chandras <hwoarang@gentoo.org> PEAR-PEAR-1.9.2.ebuild:
   Stable on amd64 wrt bug #356893
