--- a/media-gfx/fotoxx/ChangeLog
+++ b/media-gfx/fotoxx/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-gfx/fotoxx
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/fotoxx/ChangeLog,v 1.13 2011/02/09 18:16:41 grozin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/fotoxx/ChangeLog,v 1.14 2011/03/03 11:18:49 grozin Exp $
+
+*fotoxx-11.03 (03 Mar 2011)
+
+  03 Mar 2011; Andrey Grozin <grozin@gentoo.org> -fotoxx-11.01.ebuild,
+  -files/fotoxx-11.01-makefile.patch, +fotoxx-11.03.ebuild,
+  +files/fotoxx-11.03-makefile.patch:
+  Version bump
 
 *fotoxx-11.02 (09 Feb 2011)
 
